# -c-homework12

./: CMakeLists.txt  block_reader.cpp  block_reader.h  email.txt  file_splitter.cpp  file_splitter.h  main.cpp  min_prefix_function.cpp  min_prefix_function.h  shuffler.h
.github/workflows/: release.yml
